[project]
name = "flask-jeroboam"
version = "0.1.1"
authors = [
  { name="Jean-Christophe Bianic", email="jc.bianic@gmail.com" },
]
license = "MIT"
readme = "README.md"
description = "A Flask extension, inspired by FastAPI that uses Pydantic to provide easy-to-configure data validation for request parsing and response serialization."
keywords = ["flask", "pydantic", "validation", "serialization"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Framework :: Pydantic",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet",
  "Typing :: Typed",
]
dependencies = [
  "Flask>=3.1.3",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[project.urls]
Documentation = "https://flask-jeroboam.readthedocs.io"
Homepage = "https://github.com/jcbianic/flask-jeroboam"
Repository = "https://github.com/jcbianic/flask-jeroboam"
Changelog = "https://github.com/jcbianic/flask-jeroboam/releases"

[dependency-groups]
dev = [
  "GitPython>=3.1.30",
  "Pallets-Sphinx-Themes>=2.0.2",
  "Pygments>=2.10.0",
  "ruff>=0.9.0",
  "coverage[toml]>=6.2",
  "mypy>=0.930",
  "myst-parser>=3.0.0",
  "nox>=2024.10.9",
  "pre-commit>=2.16.0",
  "pre-commit-hooks>=4.1.0",
  "pytest>=6.2.5",
  "pytest-mock>=3.8.2",
  "sphinx>=7",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-click>=4.4.0",
  "sphinx-multiversion>=0.2.4",
  "sphinx-tabs>=3.4.1",
  "sphinx-copybutton>=0.5.1",
  "typeguard>=4.0.0",
  "xdoctest[colors]>=0.15.10",
  "pydantic[email]>=2.0",
  "email-validator>=2.0.0",
  "types-toml>=0.10.8.4",
  "toml>=0.10.2",
  "standard-imghdr>=3.13.0",
]

[tool.coverage.paths]
source = ["flask_jeroboam", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["flask_jeroboam"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S"]
ignore = [
  "B008",  # Function calls in default args — intentional FastAPI-style API design
  "B905",  # zip() strict= — not enforced
  "E721",  # Type comparison with == — intentional in generic type introspection
  "N818",  # Exception name suffix — InvalidRequest is a public API name
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "B018", "E402"]
"**/*.pyi" = ["N802"]
"noxfile.py" = ["S603", "S607"]

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
